Header, Footer, sections Explorer et Fonctionnement

--- a/OhMyFood.html
+++ b/OhMyFood.html
@@ -21,7 +21,7 @@
     </header>
 
     <section class="localisation">
-        <img src="images/logo/map-marker-alt-solid.svg" alt="map-marker-alt-solid">
+        <img src="images/logo/map-marker-alt-solid.svg" alt="logo-map-marker">
         <p>Paris, Belleville</p>
     </section>
     
@@ -31,12 +31,31 @@
         <button class="button-explorer">Explorer nos restaurants</button>
     </section>
 
+    <h1 class="titre-fonctionnement">Fonctionnement</h1>
+    <section class="fonctionnement">
+        <div class="fonctionnement-card">
+            <p>1</p>
+            <img src="images/logo/telephone-intelligent.svg" alt="logo-telephone">
+            <p>Choisissez un restaurant</p>
+        </div>
+        <div class="fonctionnement-card">
+            <p>2</p>
+            <img src="images/logo/list-ul.svg" alt="logo-menu">
+            <p>Composez votre menu</p>
+        </div>
+        <div class="fonctionnement-card">
+            <p>3</p>
+            <img src="images/logo/restaurant.svg" alt="logo-restaurant">
+            <p>Dégustez au restaurant</p>
+        </div>
+    </section>
+
     <footer>
         <div class="footer-line">
             <img class="logo-footer" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
         </div>
         <div class="footer-line">
-            <img src="images/logo/restaurant.svg" alt="logo-ustensils">
+            <img src="images/logo/ustensils.svg" alt="logo-ustensils">
             <a href="#">Proposer un restaurant</a>
         </div>
         <div class="footer-line">
@@ -52,4 +71,5 @@
     </footer>
 
 </body>
+
 </html>
