--- a/OhMyFood.html
+++ b/OhMyFood.html
@@ -50,6 +50,30 @@
         </div>
     </section>
 
+    <h1 class="titre-restaurant">Restaurants</h1>
+    <section class="restaurants">
+        <div class="restaurant-card">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La-palette-du-goût">
+            <p>La palette du goût</p>
+            <p>Ménilmontant</p>
+        </div>
+        <div class="restaureant-card">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+            <p>La note enchantée</p>
+            <p>Charonne></p>
+        </div>
+        <div class="restaurant-card">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+            <p>À la française</p>
+            <p>Cité Rouge</p>
+        </div>
+        <div class="restaurant-card">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+            <p>Le délice des sens</p>
+            <p>Folie-Méricourt</p>
+        </div>
+    </section>
+
     <footer>
         <div class="footer-line">
             <img class="logo-footer" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
