--- a/OhMyFood.html
+++ b/OhMyFood.html
@@ -34,17 +34,17 @@
     <h1 class="titre-fonctionnement">Fonctionnement</h1>
     <section class="fonctionnement">
         <div class="fonctionnement-card">
-            <p>1</p>
+            <p class="number">1</p>
             <img src="images/logo/telephone-intelligent.svg" alt="logo-telephone">
             <p>Choisissez un restaurant</p>
         </div>
         <div class="fonctionnement-card">
-            <p>2</p>
+            <p class="number">2</p>
             <img src="images/logo/list-ul.svg" alt="logo-menu">
             <p>Composez votre menu</p>
         </div>
         <div class="fonctionnement-card">
-            <p>3</p>
+            <p class="number">3</p>
             <img src="images/logo/restaurant.svg" alt="logo-restaurant">
             <p>Dégustez au restaurant</p>
         </div>
@@ -54,23 +54,31 @@
     <section class="restaurants">
         <div class="restaurant-card">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La-palette-du-goût">
-            <p>La palette du goût</p>
-            <p>Ménilmontant</p>
+            <div class="container">
+              <h2><b>La palette du goût</b></h2>
+              <p>Ménilmontant</p>
+            </div>
         </div>
-        <div class="restaureant-card">
+        <div class="restaurant-card">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-            <p>La note enchantée</p>
-            <p>Charonne></p>
+            <div class="container">
+                <h2><b>La note enchantée</b></h2>
+                <p>Charonne</p>
+            </div>
         </div>
         <div class="restaurant-card">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-            <p>À la française</p>
-            <p>Cité Rouge</p>
+            <div class="container">
+                <h2><b>À la française</b></h2>
+                <p>Cité Rouge</p>
+            </div>
         </div>
         <div class="restaurant-card">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-            <p>Le délice des sens</p>
-            <p>Folie-Méricourt</p>
+            <div class="container">
+                <h2><b>Le délice des sens</b></h2>
+                <p>Folie-Méricourt</p>
+            </div>
         </div>
     </section>
 
