--- a/OhMyFood.html
+++ b/OhMyFood.html
@@ -53,14 +53,20 @@
     <h1 class="titre-restaurant">Restaurants</h1>
     <section class="restaurants">
         <div class="restaurant-card">
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La-palette-du-goût">
+            <div class="image">
+                <p>Nouveau</p>
+                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La-palette-du-goût">
+            </div>
             <div class="container">
-              <h2><b>La palette du goût</b></h2>
-              <p>Ménilmontant</p>
+                <h2><b>La palette du goût</b></h2>
+                <p>Ménilmontant</p>
             </div>
         </div>
         <div class="restaurant-card">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+            <div class="image">
+                <p>Nouveau</p>
+                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+            </div>
             <div class="container">
                 <h2><b>La note enchantée</b></h2>
                 <p>Charonne</p>
