--- a/OhMyFood.html
+++ b/OhMyFood.html
@@ -16,6 +16,19 @@
 </head>
 
 <body>
+    <section class="section">
+        <span class="loader loader-quart"></span>
+        Chargement...
+    </section>
+    <section class="section section-2">
+        <span class="loader loader-double"></span>
+    </section>
+    <section class="section section-3">
+        <span class="loader loader-circles"></span>
+    </section>
+    <section class="section section-4">
+        <span class="loader loader-bars"><span></span></span>
+    </section>
     <header>
         <img src="images/logo/ohmyfood.svg" alt="logo-OhMyFood"></div>
     </header>
