loading spinner finalisation

--- a/OhMyFood.html
+++ b/OhMyFood.html
@@ -61,6 +61,9 @@
                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La-palette-du-goût">
             </div>
             <div class="container">
+                <div class="icon-heart">
+                <a class="heart" img src="images/logo/heart-solid.svg" alt="icon-heart">
+                </div>
                 <h2><b>La palette du goût</b></h2>
                 <p>Ménilmontant</p>
             </div>
