--- a/OhMyFood.html
+++ b/OhMyFood.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../sass/style.css">
+    <link rel="stylesheet" type="text/css" href="./sass/style.css">
 
     <title>OhMyFood</title>
 
@@ -61,9 +61,6 @@
                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La-palette-du-goût">
             </div>
             <div class="container">
-                <div class="icon-heart">
-                <a class="heart" img src="images/logo/heart-solid.svg" alt="icon-heart">
-                </div>
                 <h2><b>La palette du goût</b></h2>
                 <p>Ménilmontant</p>
             </div>
