--- a/OhMyFood2.html
+++ b/OhMyFood2.html
@@ -18,20 +18,18 @@
 <body>
 
     <header>
-        <img class="title" src="images/logo/arrow-left-solid.svg" alt="left-arrow-icon">
-        <img src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
+        <img class="left-arrow" src="images/logo/arrow-left-solid.svg" alt="left-arrow-icon">
+        <img class="title" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
     </header>
 
-    <img class="restaurant-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
 
     
     <section class="menu">
+        <img class="restaurant-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
         <div class="menu-title">
             <h1>À la française</h1>
             <img src="imageS/logo/heart-solid.svg" alt="heart-icon">
         </div>
-
-    <section class="menu">
 
         <h2>ENTRÉES</h2>
         <div class="menu-list">
