--- a/OhMyFood2.html
+++ b/OhMyFood2.html
@@ -22,8 +22,6 @@
         <img class="title" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
     </header>
 
-
-    
     <section class="menu">
         <img class="restaurant-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
         <div class="menu-title">
@@ -38,7 +36,7 @@
             <p>25€</p>
         </div>
         <div class="menu-list">
-            <h3>Velouté de légumes d'antan<h3>
+            <h3>Velouté de légumes d'antan</h3>
             <p>Carotte, panais, topinambour</p>
             <p>35€</p>
         </div>
@@ -55,7 +53,7 @@
             <p>40€</p>
         </div>
         <div class="menu-list">
-            <h3>Magret de canard<h3>
+            <h3>Magret de canard</h3>
             <p>Et parmentier de pommes de terres</p>
             <p>35€</p>
         </div>
@@ -72,7 +70,7 @@
             <p>18€</p>
         </div>
         <div class="menu-list">
-            <h3>Fondant au chocolat<h3>
+            <h3>Fondant au chocolat</h3>
             <p>Revisité</p>
             <p>22€</p>
         </div>
