--- a/OhMyFood2.html
+++ b/OhMyFood2.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <img class="left-arrow" src="images/logo/arrow-left-solid.svg" alt="left-arrow-icon">
+        <a href="https://github.com/Zelen-code/ZelenAlexandre_P3_25062021/blob/38a2a7c3afac7d53faa5e388d586eb855419145a/OhMyFood.html"><img class="left-arrow" src="images/logo/arrow-left-solid.svg" alt="left-arrow-icon"></a>
         <img class="title" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
     </header>
 
@@ -26,63 +26,74 @@
         <img class="restaurant-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
         <div class="menu-title">
             <h1>À la française</h1>
-            <img src="imageS/logo/heart-solid.svg" alt="heart-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16pt" height="16pt" viewBox="0 0 16 16" version="1.1">
+                <g id="surface1">
+                <path style=" stroke:none;fill-rule:nonzero;fill:rgb(255,0,0);fill-opacity:1;" d="M 14.324219 2.007812 C 12.519531 0.492188 9.726562 0.71875 8 2.476562 C 6.273438 0.71875 3.480469 0.488281 1.675781 2.007812 C -0.675781 3.988281 -0.332031 7.210938 1.34375 8.921875 L 6.824219 14.507812 C 7.136719 14.824219 7.554688 15.003906 8 15.003906 C 8.445312 15.003906 8.863281 14.828125 9.175781 14.507812 L 14.65625 8.925781 C 16.328125 7.214844 16.679688 3.992188 14.324219 2.007812 Z M 13.585938 7.867188 L 8.105469 13.453125 C 8.03125 13.527344 7.96875 13.527344 7.894531 13.453125 L 2.414062 7.867188 C 1.273438 6.707031 1.039062 4.507812 2.640625 3.160156 C 3.855469 2.136719 5.730469 2.289062 6.90625 3.488281 L 8 4.601562 L 9.09375 3.488281 C 10.273438 2.285156 12.148438 2.136719 13.359375 3.15625 C 14.957031 4.503906 14.71875 6.714844 13.585938 7.867188 Z M 13.585938 7.867188 "/>
+                </g>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16pt" height="16pt" viewBox="0 0 16 16" version="1.1">
+                <g id="surface1">
+                <path style=" stroke:none;fill-rule:nonzero;fill:rgb(255,0,0);fill-opacity:1;" d="M 14.324219 2.007812 C 12.519531 0.492188 9.726562 0.71875 8 2.476562 C 6.273438 0.71875 3.480469 0.488281 1.675781 2.007812 C -0.675781 3.988281 -0.332031 7.210938 1.34375 8.921875 L 6.824219 14.507812 C 7.136719 14.824219 7.554688 15.003906 8 15.003906 C 8.445312 15.003906 8.863281 14.828125 9.175781 14.507812 L 14.65625 8.925781 C 16.328125 7.214844 16.679688 3.992188 14.324219 2.007812 Z M 13.585938 7.867188 L 8.105469 13.453125 C 8.03125 13.527344 7.96875 13.527344 7.894531 13.453125 L 2.414062 7.867188 C 1.273438 6.707031 1.039062 4.507812 2.640625 3.160156 C 3.855469 2.136719 5.730469 2.289062 6.90625 3.488281 L 8 4.601562 L 9.09375 3.488281 C 10.273438 2.285156 12.148438 2.136719 13.359375 3.15625 C 14.957031 4.503906 14.71875 6.714844 13.585938 7.867188 Z M 13.585938 7.867188 "/>
+                </g>
+                </svg>
         </div>
 
         <h2>ENTRÉES</h2>
         <div class="menu-list">
             <h3>Tartare de poulpe acidulé</h3>
             <p>Aux zests d'orange</p>
-            <p>25€</p>
+            <h4>25€</h4>
         </div>
         <div class="menu-list">
             <h3>Velouté de légumes d'antan</h3>
             <p>Carotte, panais, topinambour</p>
-            <p>35€</p>
+            <h4>35€</h4>
         </div>
         <div class="menu-list">
             <h3>Soupe à l'oignon</h3>
             <p>Revisitée</p>
-            <p>20€</p>
+            <h4>20€</h4>
         </div>
 
         <h2>PLATS</h2>
         <div class="menu-list">
             <h3>Coquilles Saint-Jacques</h3>
             <p>Accompagnées d'une purée de panais</p>
-            <p>40€</p>
+            <h4>40€</h4>
         </div>
         <div class="menu-list">
             <h3>Magret de canard</h3>
             <p>Et parmentier de pommes de terres</p>
-            <p>35€</p>
+            <h4>35€</h4>
         </div>
         <div class="menu-list">
             <h3>Pigeonneau d'Ille-et-Vilaine</h3>
             <p>Sur son lit de gnocchis aux légumes</p>
-            <p>44€</p>
+            <h4>44€</h4>
         </div>
     
         <h2>DESSERTS</h2>
         <div class="menu-list">
             <h3>Pétales de violettes glacées</h3>
             <p>Et purée de noisettes</p>
-            <p>18€</p>
+            <h4>18€</h4>
         </div>
         <div class="menu-list">
             <h3>Fondant au chocolat</h3>
             <p>Revisité</p>
-            <p>22€</p>
+            <h4>22€</h4>
         </div>
         <div class="menu-list">
             <h3>Millefeuille croustillant</h3>
             <p>Myrtilles et pâte d'amande</p>
-            <p>23€</p>
+            <h4>23€</h4>
         </div>
 
     </section>
-
+    
+    <section class="section-explorer">
     <button class="button-explorer">Commander</button>
+    </section>
 
     <footer>
         <div class="footer-line">
