--- a/OhMyFood2.html
+++ b/OhMyFood2.html
@@ -26,16 +26,12 @@
         <img class="restaurant-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
         <div class="menu-title">
             <h1>À la française</h1>
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16pt" height="16pt" viewBox="0 0 16 16" version="1.1">
-                <g id="surface1">
-                <path style=" stroke:none;fill-rule:nonzero;fill:rgb(255,0,0);fill-opacity:1;" d="M 14.324219 2.007812 C 12.519531 0.492188 9.726562 0.71875 8 2.476562 C 6.273438 0.71875 3.480469 0.488281 1.675781 2.007812 C -0.675781 3.988281 -0.332031 7.210938 1.34375 8.921875 L 6.824219 14.507812 C 7.136719 14.824219 7.554688 15.003906 8 15.003906 C 8.445312 15.003906 8.863281 14.828125 9.175781 14.507812 L 14.65625 8.925781 C 16.328125 7.214844 16.679688 3.992188 14.324219 2.007812 Z M 13.585938 7.867188 L 8.105469 13.453125 C 8.03125 13.527344 7.96875 13.527344 7.894531 13.453125 L 2.414062 7.867188 C 1.273438 6.707031 1.039062 4.507812 2.640625 3.160156 C 3.855469 2.136719 5.730469 2.289062 6.90625 3.488281 L 8 4.601562 L 9.09375 3.488281 C 10.273438 2.285156 12.148438 2.136719 13.359375 3.15625 C 14.957031 4.503906 14.71875 6.714844 13.585938 7.867188 Z M 13.585938 7.867188 "/>
-                </g>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16pt" height="16pt" viewBox="0 0 16 16" version="1.1">
-                <g id="surface1">
-                <path style=" stroke:none;fill-rule:nonzero;fill:rgb(255,0,0);fill-opacity:1;" d="M 14.324219 2.007812 C 12.519531 0.492188 9.726562 0.71875 8 2.476562 C 6.273438 0.71875 3.480469 0.488281 1.675781 2.007812 C -0.675781 3.988281 -0.332031 7.210938 1.34375 8.921875 L 6.824219 14.507812 C 7.136719 14.824219 7.554688 15.003906 8 15.003906 C 8.445312 15.003906 8.863281 14.828125 9.175781 14.507812 L 14.65625 8.925781 C 16.328125 7.214844 16.679688 3.992188 14.324219 2.007812 Z M 13.585938 7.867188 L 8.105469 13.453125 C 8.03125 13.527344 7.96875 13.527344 7.894531 13.453125 L 2.414062 7.867188 C 1.273438 6.707031 1.039062 4.507812 2.640625 3.160156 C 3.855469 2.136719 5.730469 2.289062 6.90625 3.488281 L 8 4.601562 L 9.09375 3.488281 C 10.273438 2.285156 12.148438 2.136719 13.359375 3.15625 C 14.957031 4.503906 14.71875 6.714844 13.585938 7.867188 Z M 13.585938 7.867188 "/>
-                </g>
-                </svg>
+            <div class="icon">
+                <svg class="heart-main" stroke="pink" stroke-width="20" width="24" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="transparent" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
+                </svg>                
+                <svg class="heart-background" stroke="pink" stroke-width="20" width="24" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="transparent" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
+                </svg>                
+            </div>    
         </div>
 
         <h2>ENTRÉES</h2>
