--- a/OhMyFood2.html
+++ b/OhMyFood2.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <a href="https://github.com/Zelen-code/ZelenAlexandre_P3_25062021/blob/38a2a7c3afac7d53faa5e388d586eb855419145a/OhMyFood.html"><img class="left-arrow" src="images/logo/arrow-left-solid.svg" alt="left-arrow-icon"></a>
+        <a href="./index.html"><img class="left-arrow" src="images/logo/arrow-left-solid.svg" alt="left-arrow-icon"></a>
         <img class="title" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
     </header>
 
@@ -35,10 +35,15 @@
         </div>
 
         <h2>ENTRÉES</h2>
-        <div class="menu-list">
-            <h3>Tartare de poulpe acidulé</h3>
-            <p>Aux zests d'orange</p>
-            <h4>25€</h4>
+        <div class="row-plat">
+            <input type="checkbox" class="hidden" id="checkbox">
+                <label class="menu-list" for="checkbox">
+                    <span class="column-1">
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <p>Aux zests d'orange</p>
+                    </span> 
+                    <h4>25€</h4>
+                </label>
         </div>
         <div class="menu-list">
             <h3>Velouté de légumes d'antan</h3>
