--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 <p>Charonne</p>
             </div>
         </div>
-        <div class="restaurant-card">
+        <a href="./OhMyFood-a-la-francaise.html" class="restaurant-card">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
             <div class="container">
                 <h2><b>À la française</b></h2>
                 <p>Cité Rouge</p>
             </div>
-        </div>
+        </a>
         <div class="restaurant-card">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
             <div class="container">
