apparition menu progressive ok

--- a/OhMyFood-a-la-francaise.html
+++ b/OhMyFood-a-la-francaise.html
@@ -36,98 +36,116 @@
 
         <h2>ENTRÉES</h2>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx">
-            <label class="menu-list" for="cbx">
-                <span class="column-1">
-                    <h3>Tartare de poulpe acidulé</h3>
-                    <h4>Aux zests d'orange</h4>
-                </span>
+            <div id="row-1">
+                <input type="checkbox" class="hidden" id="cbx">
+                <label class="menu-list" for="cbx">
+                    <span class="column-1">
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <h4>Aux zests d'orange</h4>
+                    </span>
                 <span class="column-2">25€</span>
-            </label>
+                </label>
+            </div>
         </div>
         <div class="row-plat">
+            <div id="row-2">
             <input type="checkbox" class="hidden" id="cbx2">
-            <label class="menu-list" for="cbx2">
-                <span class="column-1">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <h4>Carotte, panais, topinambour</h4>
-                </span>
-                <span class="column-2">35€</span>
-            </label>
+                <label class="menu-list" for="cbx2">
+                    <span class="column-1">
+                        <h3>Velouté de légumes d'antan</h3>
+                        <h4>Carotte, panais, topinambour</h4>
+                    </span>
+                    <span class="column-2">35€</span>
+                </label>
+            </div>
         </div>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx3">
-            <label class="menu-list" for="cbx3">
-                <span class="column-1">
-                    <h3>Soupe à l'oignon</h3>
-                    <h4>Revisitée</h4>
-                </span>
-                <span class="column-2">20€</span>
-            </label>
+            <div id="row-3">
+                <input type="checkbox" class="hidden" id="cbx3">
+                <label class="menu-list" for="cbx3">
+                    <span class="column-1">
+                        <h3>Soupe à l'oignon</h3>
+                        <h4>Revisitée</h4>
+                    </span>
+                    <span class="column-2">20€</span>
+                </label>
+            </div>
         </div>
 
         <h2>PLATS</h2>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx4">
-            <label class="menu-list" for="cbx4">
-                <span class="column-1">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <h4>Accompagnées d'une purée de panais</h4>
-                </span>
-                <span class="column-2">40€</span>
-            </label>
+            <div id="row-4">
+                <input type="checkbox" class="hidden" id="cbx4">
+                <label class="menu-list" for="cbx4">
+                    <span class="column-1">
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <h4>Accompagnées d'une purée de panais</h4>
+                    </span>
+                    <span class="column-2">40€</span>
+                </label>
+            </div>
         </div>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx5">
-            <label class="menu-list" for="cbx5">
-                <span class="column-1">
-                    <h3>Magret de canard</h3>
-                    <h4>Et parmentier de pommes de terres</h4>
-                </span>
-                <span class="column-2">35€</span>
-            </label>
+            <div id="row-5">
+                <input type="checkbox" class="hidden" id="cbx5">
+                <label class="menu-list" for="cbx5">
+                    <span class="column-1">
+                        <h3>Magret de canard</h3>
+                        <h4>Et parmentier de pommes de terres</h4>
+                    </span>
+                    <span class="column-2">35€</span>
+                </label>
+            </div>
         </div>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx6">
-            <label class="menu-list" for="cbx6">
-                <span class="column-1">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <h4>Sur son lit de gnocchis aux légumes</h4>
-                </span>
-                <span class="column-2">44€</span>
-            </label>
+            <div id="row-6">
+                <input type="checkbox" class="hidden" id="cbx6">
+                <label class="menu-list" for="cbx6">
+                    <span class="column-1">
+                       <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                       <h4>Sur son lit de gnocchis aux légumes</h4>
+                    </span>
+                    <span class="column-2">44€</span>
+                </label>
+            </div>
         </div>
     
         <h2>DESSERTS</h2>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx7">
-            <label class="menu-list" for="cbx7">
-                <span class="column-1">
-                    <h3>Pétales de violettes glacées</h3>
-                    <h4>Et purée de noisettes</h4>
-                </span>
-                <span class="column-2">18€</span>
-            </label>
+            <div id="row-7">
+                <input type="checkbox" class="hidden" id="cbx7">
+                <label class="menu-list" for="cbx7">
+                    <span class="column-1">
+                        <h3>Pétales de violettes glacées</h3>
+                        <h4>Et purée de noisettes</h4>
+                    </span>
+                    <span class="column-2">18€</span>
+                </label>
+            </div>
         </div>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx8">
-            <label class="menu-list" for="cbx8">
-                <span class="column-1">
-                    <h3>Fondant au chocolat</h3>
-                    <h4>Revisité</h4>
-                </span>
-                <span class="column-2">22€</span>
-            </label>
+            <div id="row-8">
+                <input type="checkbox" class="hidden" id="cbx8">
+                <label class="menu-list" for="cbx8">
+                    <span class="column-1">
+                        <h3>Fondant au chocolat</h3>
+                        <h4>Revisité</h4>
+                    </span>
+                    <span class="column-2">22€</span>
+                </label>
+            </div>
         </div>
         <div class="row-plat">
-            <input type="checkbox" class="hidden" id="cbx9">
-            <label class="menu-list" for="cbx9">
-                <span class="column-1">
-                    <h3>Millefeuille croustillant</h3>
-                    <h4>Myrtilles et pâte d'amande</h4>
-                </span>
-                <span class="column-2">23€</span>
-            </label>
+            <div id="row-9">
+                <input type="checkbox" class="hidden" id="cbx9">
+                <label class="menu-list" for="cbx9">
+                    <span class="column-1">
+                        <h3>Millefeuille croustillant</h3>
+                        <h4>Myrtilles et pâte d'amande</h4>
+                    </span>
+                    <span class="column-2">23€</span>
+                </label>
+            </div>
         </div>
     </section>
     
