loading spinner ok

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
 
-    <div class="chargement"></div>
+    <section class="chargement-background">
+        <div class="chargement"></div>
 
     <header>
         <img src="images/logo/ohmyfood.svg" alt="logo-OhMyFood"></div>
@@ -110,7 +111,8 @@
             <a href="mailto:ohmyfood@example.com">Contact</a>
         </div>
     </footer>
-
+    </section>
+    
 </body>
 
 </html>
