--- a/OhMyFood-la-note-enchantée.html
+++ b/OhMyFood-la-note-enchantée.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="./sass/style-a-la-francaise.css">
+    <link rel="stylesheet" type="text/css" href="./sass/style-la-note-enchantée.css">
 
-    <title>OhMyFood-a-la-française</title>
+    <title>OhMyFood-la-note-enchantée</title>
 
     <link rel="preload" href="Shrikhand-Regular.woff2" as="font" type="font/woff2" crossorigin> 
     <link rel="preload" href="Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -23,9 +23,9 @@
     </header>
 
     <section class="menu">
-        <img class="restaurant-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+        <img class="restaurant-image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
         <div class="menu-title">
-            <h1>À la française</h1>
+            <h1>La note enchantée</h1>
             <div class="icon">
                 <svg class="heart-main" stroke="violet" stroke-width="20" width="24" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="transparent" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
                 </svg>                
